--- a/app/index.html
+++ b/app/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-   <title>Münzkabinett Berlin</title>
-    <meta charset="UTF-8">
-    <meta name="description" content="">
-</head>
-<body>
-  <div id="app-container">
-  </div>
-  <script type="text/javascript" src="js/app.js"></script>
-</body>
+  <head>
+     <title>Münzkabinett Berlin</title>
+      <meta charset="UTF-8">
+      <meta name="description" content="">
+  </head>
+  <body>
+    <div id="app-container">
+      <div id="ui-container"></div>
+      <div id="canvas-container"></div>
+    </div>
+    <script type="text/javascript" src="js/app.js"></script>
+  </body>
 </html>
